Fix thumb action button visibility

--- a/app/styles/preview.less
+++ b/app/styles/preview.less
@@ -116,7 +116,7 @@ thumb-page {
 			background: rgba(51, 51, 51, 0.5);
 			border-radius: 3px;
 			display: none;
-			opacity: 0.3;
+			opacity: 0.5;
 
 			&[type=edit] {
 				right: 10px;
@@ -143,7 +143,7 @@ thumb-page:not(.inactive) {
 	}
 
 	& .flipper > action-btn:hover {
-		opacity: 0.8;
+		opacity: 1;
 	}
 }
 thumb-page.full action-btn,
